testsuite/tests/backpack/should_fail/all.T
test('bkpfail01', [when(opsys("OSJavaScript"), skip), normal], backpack_typecheck_fail, [''])
test('bkpfail03', [when(opsys("OSJavaScript"), skip), normal], backpack_typecheck_fail, [''])
test('bkpfail04', [when(opsys("OSJavaScript"), skip), normal], backpack_typecheck_fail, [''])
test('bkpfail05', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail06', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail07', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail09', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail10', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail11', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail12', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail13', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail14', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail15', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail16', [when(opsys("OSJavaScript"), skip), normalise_version('base')], backpack_compile_fail, [''])
test('bkpfail17', [when(opsys("OSJavaScript"), skip), normalise_version('base')], backpack_compile_fail, [''])
test('bkpfail18', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail19', [when(opsys("OSJavaScript"), skip), normalise_version('base')], backpack_compile_fail, [''])
test('bkpfail20', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail21', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail22', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail23', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail24', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail25', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail26', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail27', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail28', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail29', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail30', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail31', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail32', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail33', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail34', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail35', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail36', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail37', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail38', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail39', [when(opsys("OSJavaScript"), skip), expect_broken(13068)], backpack_compile_fail, [''])
test('bkpfail40', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail41', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail42', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail43', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail44', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail45', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail46', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail47', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail48', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
test('bkpfail49', [when(opsys("OSJavaScript"), skip), normal], backpack_compile_fail, [''])
